fix z-index on space container

--- a/index.css
+++ b/index.css
@@ -88,6 +88,7 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: -20;
 }
 
 #space {
@@ -104,7 +105,6 @@ a:hover {
   height: 70px;
   border-radius: 50%;
   background: black;
-  z-index: -20;
 }
 
 #moon {
@@ -113,7 +113,6 @@ a:hover {
   height: 70px;
   border-radius: 50%;
   background: white;
-  z-index: -20;
 }
 
 #horizon {
